--- a/demo-resources/model-and-rbac.yaml
+++ b/demo-resources/model-and-rbac.yaml
@@ -2,74 +2,34 @@
 # This file contains the necessary model and permission configurations
 
 ---
-# Default Model for demo-bank namespace
+# Demo Model for default namespace
 apiVersion: ark.mckinsey.com/v1alpha1
 kind: Model
 metadata:
-  name: default
-  namespace: demo-bank
+  name: demo-model
+  namespace: default
 spec:
   type: azure
   model:
     valueFrom:
       secretKeyRef:
         key: model-version
-        name: demo-bank-secrets
+        name: demo-secrets
   config:
     azure:
       apiKey:
         valueFrom:
           secretKeyRef:
             key: api-key
-            name: demo-bank-secrets
+            name: demo-secrets
       apiVersion:
         valueFrom:
           secretKeyRef:
             key: api-version
-            name: demo-bank-secrets
+            name: demo-secrets
       baseUrl:
         valueFrom:
           secretKeyRef:
             key: base-url
-            name: demo-bank-secrets
+            name: demo-secrets
   pollInterval: 1m
-
----
-# ServiceAccount for demo-bank namespace
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: ark-service-account
-  namespace: demo-bank
-
----
-# ClusterRole with ARK permissions
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: ark-demo-role
-rules:
-- apiGroups: ["ark.mckinsey.com"]
-  resources: ["*"]
-  verbs: ["*"]
-- apiGroups: [""]
-  resources: ["*"]
-  verbs: ["*"]
-
----
-# Bind the ClusterRole to the ServiceAccount
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: ark-demo-binding
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: ark-demo-role
-subjects:
-- kind: ServiceAccount
-  name: default
-  namespace: demo-bank
-- kind: ServiceAccount
-  name: ark-service-account
-  namespace: demo-bank
