--- a/demo-resources/models/default.yaml
+++ b/demo-resources/models/default.yaml
@@ -1,33 +1,33 @@
-# Default Model for Banking Demo
-# Uses demo-bank-secrets for standalone operation
+# Demo Model for Banking Demo
+# Uses demo-secrets for standalone operation
 
 apiVersion: ark.mckinsey.com/v1alpha1
 kind: Model
 metadata:
-  name: default
-  namespace: demo-bank
+  name: demo-model
+  namespace: default
 spec:
   type: azure
   model:
     valueFrom:
       secretKeyRef:
         key: model-version
-        name: demo-bank-secrets
+        name: demo-secrets
   config:
     azure:
       apiKey:
         valueFrom:
           secretKeyRef:
             key: api-key
-            name: demo-bank-secrets
+            name: demo-secrets
       apiVersion:
         valueFrom:
           secretKeyRef:
             key: api-version
-            name: demo-bank-secrets
+            name: demo-secrets
       baseUrl:
         valueFrom:
           secretKeyRef:
             key: base-url
-            name: demo-bank-secrets
+            name: demo-secrets
   pollInterval: 1m
