--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,4 @@ services/ark-dashboard/ark-dashboard/lib/api/generated/openapi.json
 
 # Personal/local artifacts and experimental files
 vibe_artifacts/
+vibe_docs/
