--- a/services/ark-dashboard/chart/templates/deployment.yaml
+++ b/services/ark-dashboard/chart/templates/deployment.yaml
@@ -46,6 +46,14 @@ spec:
             value: {{ required "app.config.arkApiService.port is required" .Values.app.config.arkApiService.port | quote }}
           - name: ARK_API_SERVICE_PROTOCOL
             value: {{ required "app.config.arkApiService.protocol is required" .Values.app.config.arkApiService.protocol | quote }}
+          {{- if .Values.app.config.arkSessionsService }}
+          - name: ARK_SESSIONS_SERVICE_HOST
+            value: {{ required "app.config.arkSessionsService.host is required" .Values.app.config.arkSessionsService.host | quote }}
+          - name: ARK_SESSIONS_SERVICE_PORT
+            value: {{ required "app.config.arkSessionsService.port is required" .Values.app.config.arkSessionsService.port | quote }}
+          - name: ARK_SESSIONS_SERVICE_PROTOCOL
+            value: {{ required "app.config.arkSessionsService.protocol is required" .Values.app.config.arkSessionsService.protocol | quote }}
+          {{- end }}
           {{- if .Values.app.env }}
           {{- range .Values.app.env }}
           - name: {{ .name }}
