--- a/services/ark-dashboard/chart/values.yaml
+++ b/services/ark-dashboard/chart/values.yaml
@@ -19,8 +19,12 @@ app:
     port: "3000"
     hostname: "0.0.0.0"
     arkApiService:
-      host: "ark-api"
+      host: "ark-api.default.svc.cluster.local"
       port: "8000"
+      protocol: "http"
+    arkSessionsService:
+      host: "ark-sessions.default.svc.cluster.local"
+      port: "80"
       protocol: "http"
   
   # Other environment variables
