--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -674,6 +674,7 @@ jobs:
           - { name: ark-dashboard, path: services/ark-dashboard/chart }
           - { name: ark-mcp, path: services/ark-mcp/chart }
           - { name: ark-cluster-memory, path: services/ark-cluster-memory/chart }
+          - { name: ark-evaluator, path: services/ark-evaluator/chart }
           - { name: mcp-filesystem, path: mcp/filesystem-mcp/chart }
           - { name: localhost-gateway, path: services/localhost-gateway/chart }
           - { name: ark-tenant, path: charts/ark-tenant }
@@ -948,6 +949,7 @@ jobs:
           - ark-dashboard
           - ark-mcp
           - ark-cluster-memory
+          - ark-evaluator
           - mcp-filesystem
           - localhost-gateway
           - ark-tenant
