--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -137,6 +137,12 @@ jobs:
           if [ -n "$NEW_VIOLATIONS" ]; then
             echo "New violations found:"
             echo "$NEW_VIOLATIONS"
+
+            # Export NEW_VIOLATIONS for use in next step
+            echo "NEW_VIOLATIONS<<EOF" >> $GITHUB_ENV
+            echo "$NEW_VIOLATIONS" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+
             echo "Checking new violations against whitelist..."
               while read -r violation; do
                 if ! grep -q "$violation" "$WHITELIST"; then
@@ -153,7 +159,78 @@ jobs:
             echo "The following violations were eliminated: $REMOVED_VIOLATIONS."
           else
             echo "No new violations found."
-          fi  
+          fi
+
+      - name: Create GitHub issue for new CVE violations
+        if: always() && env.NEW_VIOLATIONS != ''
+        shell: bash
+        run: |
+          # Extract CVEs from the scan JSON for the new violations
+          CVES=$(jq -r --arg violations "$NEW_VIOLATIONS" '
+            [.[].violations[] |
+              select([.issue_id] | inside($violations | split("\n"))) |
+              .cves[]?.cve // empty
+            ] | unique | join(", ")
+          ' "$SCAN_JSON")
+
+          if [ -z "$CVES" ]; then
+            echo "No CVEs found in new violations"
+            exit 0
+          fi
+
+          echo "Found CVEs: $CVES"
+
+          # Create issue body with details
+          ISSUE_BODY=$(cat <<EOF
+          ## New CVE Violations Detected
+
+          The JFrog Xray scan has detected new security violations in the codebase.
+
+          **CVEs Found:** $CVES
+
+          **Scan Details:**
+          - Build Number: ${{ github.run_number }}
+          - Commit: ${{ github.sha }}
+          - Branch: ${{ github.ref_name }}
+          - Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+          **XRAY Violation IDs:**
+          $(echo "$NEW_VIOLATIONS" | sed 's/^/- /')
+
+          **Next Steps:**
+          1. Review the detailed scan results in the workflow run
+          2. Investigate each CVE for impact on the project
+          3. Update dependencies or apply patches as needed
+          4. If the violations are acceptable, add them to the whitelist
+
+          <details>
+          <summary>View CVE Details</summary>
+
+          $(jq -r --arg violations "$NEW_VIOLATIONS" '
+            [.[].violations[] |
+              select([.issue_id] | inside($violations | split("\n")))] |
+            map("### " + .issue_id + "\n" +
+                "**Severity:** " + .severity + "\n" +
+                "**Summary:** " + .summary + "\n" +
+                "**CVEs:** " + ([.cves[]?.cve // empty] | join(", ")) + "\n" +
+                "**Components:** " + ([.components | keys[]] | join(", ")) + "\n"
+            ) | join("\n---\n\n")
+          ' "$SCAN_JSON")
+
+          </details>
+          EOF
+          )
+
+          # Create the issue
+          gh issue create \
+            --title "New CVE Violations found: $CVES" \
+            --body "$ISSUE_BODY" \
+            --label "security,CVE" \
+            --repo "${{ github.repository }}"
+
+          echo "✅ GitHub issue created for CVE violations"
+        env:
+          GH_TOKEN: ${{ github.token }}  
 
   # Build and test Ark itself.
   build-and-test-ark:
