--- a/services/ark-dashboard/ark-dashboard/package.json
+++ b/services/ark-dashboard/ark-dashboard/package.json
@@ -33,10 +33,13 @@
     "@tanstack/react-query": "^5.87.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@xyflow/react": "^12.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "dagre": "^0.8.5",
     "jotai": "^2.15.0",
+    "js-yaml": "^4.1.1",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.9.0",
     "next": "15.5.9",
@@ -68,6 +71,8 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/dagre": "^0.7.53",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
