--- a/services/ark-cluster-memory/ark-cluster-memory/package.json
+++ b/services/ark-cluster-memory/ark-cluster-memory/package.json
@@ -20,6 +20,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "protobufjs": "^8.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3"
