--- a/services/ark-cluster-memory/devspace.yaml
+++ b/services/ark-cluster-memory/devspace.yaml
@@ -38,6 +38,30 @@ deployments:
         persistence:
           enabled: true
           size: 1Gi
+        otelEnvironmentVariableSecrets:
+          enabled: true
+          namespaces:
+            - ark-system
+            - default
+
+hooks:
+  - command: |-
+      echo "Restarting ark-controller to pick up cluster-memory OTEL configuration..."
+
+      # Check if ark-controller-devspace exists first (DevSpace deployment)
+      if kubectl get deployment ark-controller-devspace -n ark-system >/dev/null 2>&1; then
+        echo "Found ark-controller-devspace, restarting..."
+        kubectl rollout restart deployment/ark-controller-devspace -n ark-system
+        kubectl rollout status deployment/ark-controller-devspace -n ark-system --timeout=120s
+      # Otherwise check for regular ark-controller deployment
+      elif kubectl get deployment ark-controller -n ark-system >/dev/null 2>&1; then
+        echo "Found ark-controller, restarting..."
+        kubectl rollout restart deployment/ark-controller -n ark-system
+        kubectl rollout status deployment/ark-controller -n ark-system --timeout=120s
+      else
+        echo "Warning: No ark-controller deployment found in ark-system namespace"
+      fi
+    events: ["after:deploy:ark-cluster-memory"]
 
 dev:
   ark-cluster-memory:
