feat: add trace persistence to ark-broker
Add TRACE_FILE_PATH environment variable to persist OTEL traces
across broker restarts. Previously traces were only kept in memory
and lost on restart.

--- a/services/ark-broker/chart/templates/deployment.yaml
+++ b/services/ark-broker/chart/templates/deployment.yaml
@@ -49,6 +49,8 @@ spec:
               value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.memoryFileName }}"
             - name: STREAM_FILE_PATH
               value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.streamFileName }}"
+            - name: TRACE_FILE_PATH
+              value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.traceFileName }}"
             {{- end }}
           {{- if .Values.persistence.enabled }}
           volumeMounts:
