feat: add operation events to broker page (#642)
## Summary

- Transport OperationTracker events from ark controller to broker via
HTTP POST, with one-time endpoint discovery at startup and fallback to
Kubernetes events when broker unavailable
- Add EventStore to ark-broker service with SSE streaming endpoints for
real-time operation event delivery (`/events` and `/events/:query_id`)
- Add `/v1/broker/events` proxy endpoint in ark-api to stream operation
events from broker to clients using Server-Sent Events
- Add Events tab to dashboard broker page for real-time visualization of
operation events (Start, Complete, Fail) alongside existing traces,
messages, and chunks
- Update 8 recorder constructors to accept separate emitters for regular
events (K8s only) and operation events (broker with K8s fallback)

## Checklist

- [x] Follow the [contributor guide](./CONTRIBUTING.md)
- [ ] End-to-end tests pass
- [ ] Unit tests for essential parts of your code, e.g. APIs exposed via
SDKs or endpoints
- [ ] Update `./docs`
- [ ] Recognize contributors with "@all-contributors please add <person>
for <code, bug, docs, etc>"
- [x] Linked issues
[ARKQB-571](https://mckinsey.atlassian.net/browse/ARKQB-571)

--- a/services/ark-broker/chart/templates/deployment.yaml
+++ b/services/ark-broker/chart/templates/deployment.yaml
@@ -49,6 +49,10 @@ spec:
               value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.memoryFileName }}"
             - name: STREAM_FILE_PATH
               value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.streamFileName }}"
+            - name: TRACE_FILE_PATH
+              value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.traceFileName }}"
+            - name: EVENT_FILE_PATH
+              value: "{{ .Values.persistence.mountPath }}/{{ .Values.persistence.eventFileName }}"
             {{- end }}
           {{- if .Values.persistence.enabled }}
           volumeMounts:
