--- a/samples/queries/query-with-service-account.yaml
+++ b/samples/queries/query-with-service-account.yaml
@@ -24,7 +24,7 @@ metadata:
   name: sample-query-with-sa
 spec:
   input: "Analyze the quarterly sales data and provide insights"
-  targets:
-    - type: agent
-      name: data-analyst
+  target:
+    type: agent
+    name: data-analyst
   serviceAccount: query-runner
