--- a/samples/queries/query-resolution-flow.yaml
+++ b/samples/queries/query-resolution-flow.yaml
@@ -39,9 +39,9 @@ spec:
         configMapKeyRef:
           name: app-config
           key: request-timeout
-  targets:
-    - type: agent
-      name: payment-processor
+  target:
+    type: agent
+    name: payment-processor
 ---
 # Supporting ConfigMap for customer configuration
 apiVersion: v1
