--- a/samples/queries/query-with-timeout.yaml
+++ b/samples/queries/query-with-timeout.yaml
@@ -9,9 +9,9 @@ spec:
     
     Please provide detailed insights and recommendations based on the analysis.
   timeout: "10m"
-  targets:
-    - type: agent
-      name: data-analyst
+  target:
+    type: agent
+    name: data-analyst
 ---
 apiVersion: ark.mckinsey.com/v1alpha1
 kind: Query
@@ -24,4 +24,4 @@ spec:
   timeout: "30s"
   targets:
     - type: agent
-      name: market-analyst
+    name: market-analyst
