refactor: cleanup multi-target query remnants and regenerate types
- Remove obsolete samples (query-multiple-targets, multi-model-agents)
- Remove deprecated query.sh script, use ark-cli in CI instead
- Regenerate dashboard types with single-target Query schema

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -442,9 +442,9 @@ jobs:
       - name: Test end-to-end query
         run: |
           kubectl describe agent sample-agent
-          # Test the soon-to-be-deprecated query script (still used in quickstart).
-          ./scripts/query.sh agent/sample-agent "confirm you have read this message"
-          # Test fark.
+          # Test ark-cli query command
+          ark query agent/sample-agent "confirm you have read this message"
+          # Test fark
           fark agent sample-agent "confirm you have read this message"
 
   e2e-ark-cli:
