--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -180,6 +180,65 @@ jobs:
 
           echo "Found CVEs: $CVES"
 
+          # Check if an issue already exists for any of these CVEs
+          echo "Checking for existing issues with these CVEs..."
+          IFS=',' read -ra CVE_ARRAY <<< "$CVES"
+          EXISTING_ISSUE=""
+
+          for cve in "${CVE_ARRAY[@]}"; do
+            # Trim whitespace
+            cve=$(echo "$cve" | xargs)
+            echo "Searching for existing issues with CVE: $cve"
+
+            # Search for open issues with the CVE label containing this CVE in the title
+            ISSUE_NUMBER=$(gh issue list \
+              --repo "${{ github.repository }}" \
+              --label "CVE" \
+              --state open \
+              --search "in:title $cve" \
+              --json number \
+              --jq '.[0].number // empty')
+
+            if [ -n "$ISSUE_NUMBER" ]; then
+              EXISTING_ISSUE=$ISSUE_NUMBER
+              echo "Found existing issue #$EXISTING_ISSUE for CVE: $cve"
+              break
+            fi
+          done
+
+          if [ -n "$EXISTING_ISSUE" ]; then
+            echo "⚠️  Issue #$EXISTING_ISSUE already exists for one or more of these CVEs"
+            echo "Updating existing issue with new scan information..."
+
+            # Add a comment to the existing issue
+            COMMENT_BODY=$(cat <<EOF
+          ## New Scan Detected Same CVEs
+
+          The JFrog Xray scan has detected these CVEs again in a new scan.
+
+          **CVEs Found:** $CVES
+
+          **Scan Details:**
+          - Build Number: ${{ github.run_number }}
+          - Commit: ${{ github.sha }}
+          - Branch: ${{ github.ref_name }}
+          - Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+          **XRAY Violation IDs:**
+          $(echo "$NEW_VIOLATIONS" | sed 's/^/- /')
+          EOF
+          )
+
+            gh issue comment "$EXISTING_ISSUE" \
+              --repo "${{ github.repository }}" \
+              --body "$COMMENT_BODY"
+
+            echo "✅ Updated existing issue #$EXISTING_ISSUE"
+            exit 0
+          fi
+
+          echo "No existing issues found. Creating new issue..."
+
           # Create issue body with details
           ISSUE_BODY=$(cat <<EOF
           ## New CVE Violations Detected
