--- a/ark/config/crd/bases/ark.mckinsey.com_queries.yaml
+++ b/ark/config/crd/bases/ark.mckinsey.com_queries.yaml
@@ -24,6 +24,9 @@ spec:
     - jsonPath: .status.duration
       name: Duration
       type: string
+    - jsonPath: .status.retryCount
+      name: Retries
+      type: integer
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
@@ -306,6 +309,35 @@ spec:
                   - name
                   type: object
                 type: array
+              retryPolicy:
+                properties:
+                  backoffPolicy:
+                    default: exponential
+                    enum:
+                    - exponential
+                    - linear
+                    - fixed
+                    type: string
+                  initialDelay:
+                    default: 1s
+                    type: string
+                  maxDelay:
+                    default: 30s
+                    type: string
+                  maxRetries:
+                    default: 0
+                    format: int32
+                    maximum: 10
+                    minimum: 0
+                    type: integer
+                  maxTokens:
+                    description: |-
+                      Maximum total tokens across all retry attempts. If exceeded, query stops retrying.
+                      If not specified, only maxRetries is used.
+                    format: int64
+                    minimum: 0
+                    type: integer
+                type: object
               selector:
                 description: |-
                   A label selector is a label query over a set of resources. The result of matchLabels and
@@ -510,6 +542,9 @@ spec:
                       type: object
                   type: object
                 type: array
+              retryCount:
+                format: int32
+                type: integer
               tokenUsage:
                 properties:
                   completionTokens:
